# ny

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bun.lockb  install.sh  package.json  readme.md
.changeset/: bright-shoes-explain.md  config.json  dry-pants-march.md  great-beans-divide.md  sync-cargo-version.ts  tall-jeans-retire.md  tough-beds-fix.md
.github/workflows/: changesets.yml  ci.yml  release.yml
src/common/: agent.rs  cli.rs  execute.rs  fs.rs  http.rs  lib.rs  test_e2e.rs  utils.rs
src/common/commands/: add.rs  install.rs  install_ts_types.rs  mod.rs  run.rs  run_optimized.rs
test-e2e/: README.md  bun.lockb  bunfig.toml  package.json
test-e2e/sandboxes/yarn/: package.json
test-e2e/test/: add.test.ts  help.test.ts  run.test.ts  setup.ts
tests/: integration_test.rs  tests_add.rs  tests_help.rs  tests_scripts.rs
tests-e2e/: README.md  help.test.ts  package.json  test-utils.ts
tests-e2e/test/: test-utils.ts
tests-e2e/yarn/: package.json
tests/shared/: mod.rs
