[package]
name = "ny"
version = "0.2.0"
edition = "2021"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
eyre = { version = "0.6.8", features = [
  "auto-install",
], default-features = false }
lazy_static = "1.4.0"
mockall = { version = "0.11.4", features = ["nightly"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
serde_json = "1.0.96"
tempdir = "0.3.7"
